--- a/MDK-ARM/Motor89/Motor89.build_log.htm
+++ b/MDK-ARM/Motor89/Motor89.build_log.htm
@@ -21,17 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-E:\32Project\RC2023\RR_Control\MDK-ARM\Motor89.uvprojx
+E:\32Project\RC2023\ER_Control\MDK-ARM\Motor89.uvprojx
 Project File Date:  04/10/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\download\ARM\ARMCC\Bin'
 Build target 'Motor89'
-assembling startup_stm32f407xx.s...
-compiling freertos.c...
-linking...
-Program Size: Code=21916 RO-data=556 RW-data=188 ZI-data=23132  
-FromELF: creating hex file...
 "Motor89\Motor89.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -55,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
