--- a/MDK-ARM/Motor89/Motor89.build_log.htm
+++ b/MDK-ARM/Motor89/Motor89.build_log.htm
@@ -27,13 +27,12 @@ Project File Date:  05/01/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\download\ARM\ARMCC\Bin'
 Build target 'Motor89'
-assembling startup_stm32f407xx.s...
-compiling gpio.c...
-compiling tim.c...
+compiling stm32f4xx_hal_gpio.c...
 compiling stm32f4xx_it.c...
 compiling idlenew.c...
+compiling main.c...
 linking...
-Program Size: Code=26584 RO-data=556 RW-data=188 ZI-data=23636  
+Program Size: Code=26632 RO-data=556 RW-data=188 ZI-data=23636  
 FromELF: creating hex file...
 "Motor89\Motor89.axf" - 0 Error(s), 0 Warning(s).
 
